# rubiccube-solver

./: .gitignore  README.md  data  preprocess.py  pyproject.toml  train.py  train_network.py
config/: global_parameters.json  logger.json
src/: cube.py
src/EL/: el_agent.py  monte_carlo.py  q_learning.py  util.py
src/FN/fn_framework/: __init__.py  fn_agent.py  observer.py  trainer.py
src/env/: __init__.py  action.py  basic_action.py  cube.py  environment.py
src/neural_network/: _dataloader.py  data.py  dataloader.py  network.py  network_02.py  train.py
src/neural_network/data/: __init__.py  data.py  datasets.py  features.py
src/utils/: cube_util.py
src/utils/cube_util/: __init__.py  cube_util.py  get_color_swap_states.py
